--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       crossorigin="anonymous"></script>
     <script src="js/application.js" defer="defer"></script>
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="center row">
+    <div class="row">
       <h1>Movie Search</h1>
       <form>
       <input id="userInput" placeholder="movie title" value=""/>
@@ -20,7 +21,14 @@
       <button id="random">Random</button>
       </form>
     </div>
-      <div class="center row" id="results">
+      <div class="row" id="results">
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="holder.js/100x180/" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Title</h4>
+          <p class="card-text">Text</p>
+        </div>
       </div>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
