--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="row">
+    <div class="row justify-content-center p-2" id="headerBg">
+      <div class="col-12 text-center ">
       <h1>Movie Search</h1>
-      <form>
-      <input id="userInput" placeholder="movie title" value=""/>
-      <button type="button" id="submitBtn" onclick="searchMovie()">Search</button>
-      <button id="random">Random</button>
+      </div>
+      <form class="col-12 col-md-4 m-2">
+      
+      <input class="col-12" id="userInput" placeholder="movie title" value=""/>
+      <button class="btn btn-sm bg-info m-2" type="button" id="submitBtn" onclick="searchMovie()">Search</button>
+      <button class="btn btn-sm bg-success m-2" id="random">Random</button>
       </form>
     </div>
-      <div class="row" id="results">
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="holder.js/100x180/" alt="">
-        <div class="card-body">
-          <h4 class="card-title">Title</h4>
-          <p class="card-text">Text</p>
-        </div>
+      <div class="row justify-content-around no-gutters" id="results">
       </div>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
