further visual improvements

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
   </head>
-  <body>
-    <div class="row justify-content-center p-2 no-gutters" id="headerBg">
-      <div class="col-12 text-center ">
-      <h1>Movie Search</h1>
-      </div>
-      <form class="col-10 col-md-4 m-2">
-        <input class="col-12 rounded-pill search-bar text-light" id="userInput" placeholder="movie title" value=""/>
-        <button class="btn btn-md  bg-info m-2" type="button" id="submitBtn" onclick="searchMovie()">Search</button>
-        <button class="btn btn-md bg-success m-2 " id="random">Random</button>
-      </form>
+    <header class="container-fluid">
+      <div class="container text-center" id="searchBox">
+        <h1 class="pt-3">Movie Search</h1>
+        <div class="row justify-content-center">
+          <div class="form col-12 col-md-7">   
+            <input class="col-8 col-md-10" id="userInput" type="text" placeholder="search"/>
+            <span class="fa fa-search col-xs-1" data-toggle="tooltip" title="Search" onclick="searchMovie()" id="submitBtn"></span>
+            <span class="fa bar col-xs-1 px-2"><b>|</b></span>
+            <a href="javascript:void(0);"><span class="fa fa-random col-xs-1"  data-toggle="tooltip" title="Random topic" id="random"></span></a>
+          </div>
+        </div>
     </div>
+    </header>
+    <body>
       
       <div class="row justify-content-center no-gutters" id="results">
       </div>
