--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1 class="pt-3">Movie Search</h1>
         <div class="row justify-content-center">
           <div class="form col-12 col-md-7">   
-            <input class="col-8 col-md-10" id="userInput" type="text" placeholder="search"/>
+            <input class="col-8 col-xs-9" id="userInput" type="text" placeholder="search"/>
             <span class="fa fa-search col-xs-1" data-toggle="tooltip" title="Search" onclick="searchMovie()" id="submitBtn"></span>
-            <span class="fa bar col-xs-1 px-2"><b>|</b></span>
+            <span class="fa bar col-1 px-2"><b>|</b></span>
             <a href="javascript:void(0);"><span class="fa fa-random col-xs-1"  data-toggle="tooltip" title="Random topic" id="random"></span></a>
           </div>
         </div>
@@ -31,7 +31,9 @@
       
       <div class="row justify-content-center no-gutters" id="results">
       </div>
-      
+      <div class="container-fluid" id="footer">
+        <div class="container text-center" id="page-nav"></div>
+      </div>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
